2010-03-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Resurrected --http-proxy-user and --http-proxy-passwd option.
	Added --https-proxy-user, --https-proxy-passwd, --ftp-proxy-user,
	--ftp-proxy-passwd, --all-proxy-user, --all-proxy-passwd option.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc
	* src/OptionHandlerImpl.h
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/OptionHandlerTest.cc

2010-03-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Russian and Simplified Chinese translation. Thanks to all
	translators.
	* po/ru.po
	* po/zh_CN.po

2010-03-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2010-03-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	For LPD sockets, bind IN_ADDRANY because binding multicast address
	fails under Windows.
	* src/LpdMessageReceiver.cc
	* test/LpdMessageDispatcherTest.cc

2010-03-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that error message is not propagated to Exception.
	* src/SocketCore.cc

2010-03-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --bt-lpd-interface option in man page.
	* doc/aria2c.1.txt

2010-03-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.9.0
	* configure.ac

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that FillRequestGroupCommand is not invoked when
	RequestGroupMan::createInitialCommand() creates no Command object.
	* src/FillRequestGroupCommand.cc
	* src/RequestGroupMan.cc

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added debug logs.
	* src/FileEntry.cc
	* src/SegmentMan.cc

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed unit test error with mingw32 build.
	* test/LpdMessageReceiverTest.cc

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated automake-1.11.1
